--- a/checkout.html
+++ b/checkout.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <Header> <p id="logo">FURNADA</p>
+    <nav class="navbar">
+        <ul>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="products.html">PRODUCTS</a></li>
+            <li><a href="checkout.html">CHECKOUT</a></li>
+        </ul>
     
+    
+    </Header>
 </body>
 </html>
