--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <Header> <p id="logo">FURNADA</p>
-    <nav>
+    <nav class="navbar">
         <ul>
             <li><a href="home.html">HOME</a></li>
             <li><a href="products.html">PRODUCTS</a></li>
