--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
     <Header> <p id="logo">FURNADA</p>
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="products.html">PRODUCTS</a></li>
             <li><a href="checkout.html">CHECKOUT</a></li>
         </ul>
