added divs in other htmls

--- a/products.html
+++ b/products.html
@@ -17,5 +17,10 @@
     
     
     </Header>
+    <main>
+        <div class= "top-container"></div>
+        <div class= "mid-home-container"></div>
+        <div class= "bottom-container"></div>
+    </main>
 </body>
 </html>
