--- a/products.html
+++ b/products.html
@@ -15,11 +15,29 @@
             <li><a href="checkout.html">CHECKOUT</a></li>
         </ul>
     
-    
+        <div class= "top-container"></div>
     </Header>
     <main>
-        <div class= "top-container"></div>
-        <div class= "mid-home-container"></div>
+        <div class="showcase-container">
+            <div>
+                <a href="#" >
+                    <img class="showcase-img" src="img/Sofa-1.png" alt="A beige recliner sofa">
+                </a>
+                <p class="showcase-item-text">Beige sofa</p>
+            </div>
+            <div>
+                <a href="#" >
+                    <img class="showcase-img" src="img/Sofa-2.jpg" alt="A Blue Sofa">
+                </a>
+                <p class="showcase-item-text">Beige sofa</p>
+            </div>
+            <div>
+                <a href="#" >
+                    <img class="showcase-img" src="img/Sofa-3.png" alt="A Brown-beige sofa">
+                </a>
+                <p class="showcase-item-text">Beige sofa</p>
+            </div>
+        </div>
         <div class= "bottom-container"></div>
     </main>
 </body>
