Added shadows to the products
so that they pop out more

--- a/products.html
+++ b/products.html
@@ -19,23 +19,23 @@
     </Header>
     <main>
         <div class="showcase-container">
-            <div>
+            <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-1.png" alt="A beige recliner sofa">
                 </a>
                 <p class="showcase-item-text">Beige sofa</p>
             </div>
-            <div>
+            <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-2.jpg" alt="A Blue Sofa">
                 </a>
-                <p class="showcase-item-text">Beige sofa</p>
+                <p class="showcase-item-text">Blue sofa</p>
             </div>
-            <div>
+            <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-3.png" alt="A Brown-beige sofa">
                 </a>
-                <p class="showcase-item-text">Beige sofa</p>
+                <p class="showcase-item-text">Brown sofa</p>
             </div>
         </div>
         <div class= "bottom-container"></div>
