--- a/products.html
+++ b/products.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -23,7 +26,7 @@
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-1.png" alt="A beige recliner sofa">
                 </a>
-                <p class="showcase-item-text">Beige sofa</p>
+                <p class="showcase-item-text">Recliner sofa</p>
             </div>
             <div class="showcase-shadows">
                 <a href="#" >
@@ -35,7 +38,25 @@
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-3.png" alt="A Brown-beige sofa">
                 </a>
+                <p class="showcase-item-text">Leather sofa</p>
+            </div>
+            <div class="showcase-shadows">
+                <a href="#" >
+                    <img class="showcase-img" src="img/Sofa-4.jpg" alt="A Brown sofa">
+                </a>
                 <p class="showcase-item-text">Brown sofa</p>
+            </div>
+            <div class="showcase-shadows">
+                <a href="#" >
+                    <img class="showcase-img" src="img/Sofa-5.jpg" alt="A grey sofa">
+                </a>
+                <p class="showcase-item-text">Grey sofa</p>
+            </div>
+            <div class="showcase-shadows">
+                <a href="#" >
+                    <img class="showcase-img" src="img/Sofa-6.jpg" alt="a peachy beige colored sofa">
+                </a>
+                <p class="showcase-item-text">Beige sofa</p>
             </div>
         </div>
         <div class= "bottom-container"></div>
