Home page title and text

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
     </Header>
 </div>
     <main>
-        
-        <div class= "mid-home-container"></div>
+        <div class= "mid-home-container">
+            <div class="wrapper">
+                <h1 class="home-title">Welcome to Furnada!</h1>
+                <p class="home-text"> 
+                    The home of the best cozy furniture and decorative additions to your everyday life!
+                </p>
+            </div>
+        </div>
         <div class= "bottom-container"></div>
     </main> 
 </body>
