--- a/products.html
+++ b/products.html
@@ -23,40 +23,46 @@
     <main>
         <div class="showcase-container">
             <div class="showcase-shadows">
-                <a href="#" >
+                <a href="product-1.html" >
                     <img class="showcase-img" src="img/Sofa-1.png" alt="A beige recliner sofa">
                 </a>
                 <p class="showcase-item-text">Recliner sofa</p>
+                <p class="showcase-item-text">1199$</p>
             </div>
             <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-2.jpg" alt="A Blue Sofa">
                 </a>
                 <p class="showcase-item-text">Blue sofa</p>
+                <p class="showcase-item-text">1699$</p>
             </div>
             <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-3.png" alt="A Brown-beige sofa">
                 </a>
                 <p class="showcase-item-text">Leather sofa</p>
+                <p class="showcase-item-text">3199$</p>
             </div>
             <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-4.jpg" alt="A Brown sofa">
                 </a>
                 <p class="showcase-item-text">Brown sofa</p>
+                <p class="showcase-item-text">2099$</p>
             </div>
             <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-5.jpg" alt="A grey sofa">
                 </a>
                 <p class="showcase-item-text">Grey sofa</p>
+                <p class="showcase-item-text">2599$</p>
             </div>
             <div class="showcase-shadows">
                 <a href="#" >
                     <img class="showcase-img" src="img/Sofa-6.jpg" alt="a peachy beige colored sofa">
                 </a>
                 <p class="showcase-item-text">Beige sofa</p>
+                <p class="showcase-item-text">999$</p>
             </div>
         </div>
         <div class= "bottom-container"></div>
