Featured Items on Home Page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,30 @@
                 </p>
             </div>
         </div>
-        <div class= "bottom-container"></div>
+        <div class= "bottom-home-container">
+            <h1 class="featured-item-title">Featured Items:</h1>
+
+            <div class="showcase-container-home">
+                <div>
+                    <a href="#" >
+                        <img class="showcase-img-home" src="img/Sofa-1.png" alt="A beige recliner sofa">
+                    </a>
+                    <p class="showcase-item-text-home">Recliner sofa</p>
+                </div>
+                <div>
+                    <a href="#" >
+                        <img class="showcase-img-home" src="img/Sofa-2.jpg" alt="A Blue Sofa">
+                    </a>
+                    <p class="showcase-item-text-home">Blue sofa</p>
+                </div>
+                <div>
+                    <a href="#" >
+                        <img class="showcase-img-home" src="img/Sofa-3.png" alt="A Brown-beige sofa">
+                    </a>
+                    <p class="showcase-item-text-home">Leather sofa</p>
+                </div>
+            </div>
+        </div>
     </main> 
 </body>
 </html>
