--- a/product-1.html
+++ b/product-1.html
@@ -27,9 +27,10 @@
     <main>
         <div class="product-1-showcase">
            <img class="product-1" src="img/Sofa-1.png" alt="A beige recliner sofa">
-           <p class="product-1-text">Beige Sofa</p>
-           <p class="product-1-price">$1199,9</p>
-           <p></p>
+           <div class="product-1-text-container">
+              <p class="product-1-text">Beige Sofa</p>
+              <p class="product-1-price">$1199,9</p>
+           </div>
         </div>
            <button class="product-1-button">Add to cart</button>
     </main> 
