--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class= "bottom-home-container">
-            <h1 class="featured-item-title">Featured Items:</h1>
+            <h1 class="featured-item-title">Featured Items</h1>
 
             <div class="showcase-container-home">
                 <div>
@@ -56,7 +56,30 @@
                     <p class="showcase-item-text-home">Leather sofa</p>
                 </div>
             </div>
-        </div>
     </main> 
+    <div class="footer-container">
+        <div class="column1">
+            <h3>Support</h3>
+            <a href="#">Contact Us</a>
+            <a href="#">Return Item</a>
+            <a href="#">FAQ</a>
+            <a href="#">Privacy Choices</a>
+            <a href="#">Payment Options</a>
+        </div>
+
+        <div class="column2">
+            <h3>About Us</h3>
+            <a href="#">Career</a>
+            <a href="#">Partners</a>
+            <a href="#">Blog</a>
+        </div>
+
+        <div class="column3">
+            <h3>Legal</h3>
+            <a href="#">Terms of Service</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Community Guidelines</a>
+        </div>
+    </div>
 </body>
 </html>
