--- a/product-1.html
+++ b/product-1.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class= "top-container">
@@ -25,12 +28,39 @@
     </Header>
 </div>
     <main>
-        <div class="product-1-showcase">
-           <img class="product-1" src="img/Sofa-1.png" alt="A beige recliner sofa">
-           <div class="product-1-text-container">
-              <p class="product-1-text">Beige Sofa</p>
-              <p class="product-1-price">$1199,9</p>
-           </div>
+        <div class="p1-showcase">
+            <div class = "p1-card">
+                <div class="p1-imgs">
+                    <div class="p1-img-display">
+                       <div class="p1-img-showcase">
+                        <img src="img/Sofa-1.png" alt="sofa-image">
+                       </div>
+                    </div>
+                </div>
+
+                <div class="p1-content">
+                    <h2 class="p1-title">Beige sofa</h2>
+                    <div class="p1-rating">
+                        <h3>★★★★☆ <span>4.5(20)</span></h3>
+                    </div>
+
+                    <div class="p1-price">
+                    <p class="old-price">Old price: <span>$1599.00</span></p>
+                    <p class="new-price">New price: <span>$1199.00 (30%)</span></p>
+                    </div>
+
+                    <div class="p1-detail">
+                        <h2>About this item</h2>
+                        <p>Unwind in style with our plush beige recliner sofa, designed for ultimate comfort and relaxation. Featuring soft, durable upholstery and smooth reclining mechanisms, this sofa provides the perfect spot to lounge after a long day. Its neutral beige color effortlessly complements any décor, while generously padded cushions and supportive armrests ensure a cozy seating experience. Perfect for movie nights or casual lounging, this recliner sofa is a must-have for any living space.</p>
+                    </div>
+
+                    <div class="purchase-info">
+                        <button type="button" class="button">
+                            Add to cart 🛒
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
            <button class="product-1-button">Add to cart</button>
     </main> 
