fixing the product page

--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="js/main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,7 +38,7 @@
 
         <tr>
           <td>
-            <div class="cart-info">
+            <div id="beigeSofa" class="cart-info">
               <img src="img/Sofa-1.png" alt="beige sofa" />
               <div>
                 <p>Beige Sofa</p>
@@ -52,7 +53,7 @@
         </tr>
         <tr>
           <td>
-            <div class="cart-info">
+            <div id="blueSofa" class="cart-info">
               <img src="img/Sofa-2.jpg" alt="blue sofa" />
               <div>
                 <p>Blue Sofa</p>
