--- a/products.html
+++ b/products.html
@@ -21,52 +21,47 @@
     
         <div class= "top-container"></div>
     </Header>
-    <main>
-        <div class="showcase-container">
-            <div class="showcase-shadows">
-                <a href="product-1.html" >
-                    <img class="showcase-img" src="img/Sofa-1.png" alt="A beige recliner sofa">
-                </a>
-                <p class="showcase-item-text">Recliner sofa</p>
-                <p class="showcase-item-text">1199$</p>
-            </div>
-            <div class="showcase-shadows">
-                <a href="#" >
-                    <img class="showcase-img" src="img/Sofa-2.jpg" alt="A Blue Sofa">
-                </a>
-                <p class="showcase-item-text">Blue sofa</p>
-                <p class="showcase-item-text">1699$</p>
-            </div>
-            <div class="showcase-shadows">
-                <a href="#" >
-                    <img class="showcase-img" src="img/Sofa-3.png" alt="A Brown-beige sofa">
-                </a>
-                <p class="showcase-item-text">Leather sofa</p>
-                <p class="showcase-item-text">3199$</p>
-            </div>
-            <div class="showcase-shadows">
-                <a href="#" >
-                    <img class="showcase-img" src="img/Sofa-4.jpg" alt="A Brown sofa">
-                </a>
-                <p class="showcase-item-text">Brown sofa</p>
-                <p class="showcase-item-text">2099$</p>
-            </div>
-            <div class="showcase-shadows">
-                <a href="#" >
-                    <img class="showcase-img" src="img/Sofa-5.jpg" alt="A grey sofa">
-                </a>
-                <p class="showcase-item-text">Grey sofa</p>
-                <p class="showcase-item-text">2599$</p>
-            </div>
-            <div class="showcase-shadows">
-                <a href="#" >
-                    <img class="showcase-img" src="img/Sofa-6.jpg" alt="a peachy beige colored sofa">
-                </a>
-                <p class="showcase-item-text">Beige sofa</p>
-                <p class="showcase-item-text">999$</p>
-            </div>
-        </div>
-        <div class= "bottom-container"></div>
-    </main>
+
+<div class="container1">
+    <div class="pDuct">
+        <img src="img/Sofa-1.png" alt="beige sofa">
+        <h3 href="product-1.html">Beige Sofa</h3>
+        <h3>$1099.00</h3>
+        <a class="add-cart cart1" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-2.jpg" alt="sofa-image">
+        <h3>Navy Sofa</h3>
+        <h3>$1599.00</h3>
+        <a class="add-cart cart2" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-3.png" alt="sofa-image">
+        <h3>Beige Sofa</h3>
+        <h3>$1699.00</h3>
+        <a class="add-cart cart3" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-4.jpg" alt="sofa-image">
+        <h3>Beige Sofa</h3>
+        <h3>$1699.00</h3>
+        <a class="add-cart cart4" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-5.jpg" alt="sofa-image">
+        <h3>Beige Sofa</h3>
+        <h3>$1599.00</h3>
+        <a class="add-cart cart5" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-6.jpg" alt="sofa-image">
+        <h3>Beige Sofa</h3>
+        <h3>$1299.00</h3>
+        <a class="add-cart cart6" href="#">Add Cart</a>
+    </div>
+</div>
+    
+
+
 </body>
 </html>
