--- a/products.html
+++ b/products.html
@@ -37,27 +37,51 @@
     </div>
     <div class="pDuct">
         <img src="img/Sofa-3.png" alt="sofa-image">
-        <h3>Beige Sofa</h3>
+        <h3>Leather Sofa</h3>
         <h3>$1699.00</h3>
         <a class="add-cart cart3" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-4.jpg" alt="sofa-image">
-        <h3>Beige Sofa</h3>
+        <h3>Brown Sofa</h3>
         <h3>$1699.00</h3>
         <a class="add-cart cart4" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-5.jpg" alt="sofa-image">
-        <h3>Beige Sofa</h3>
+        <h3>Grey Sofa</h3>
         <h3>$1599.00</h3>
         <a class="add-cart cart5" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-6.jpg" alt="sofa-image">
-        <h3>Beige Sofa</h3>
+        <h3>White Sofa</h3>
         <h3>$1299.00</h3>
         <a class="add-cart cart6" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-7.png" alt="sofa-image">
+        <h3>Orange Sofa</h3>
+        <h3>$1399.00</h3>
+        <a class="add-cart cart7" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-8.png" alt="sofa-image">
+        <h3>Pink Sofa</h3>
+        <h3>$1099.00</h3>
+        <a class="add-cart cart8" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-9.jpg" alt="sofa-image">
+        <h3>Coffee Sofa</h3>
+        <h3>$1299.00</h3>
+        <a class="add-cart cart9" href="#">Add Cart</a>
+    </div>
+    <div class="pDuct">
+        <img src="img/Sofa-10.jpg" alt="sofa-image">
+        <h3>Dark Sofa</h3>
+        <h3>$1299.00</h3>
+        <a class="add-cart cart10" href="#">Add Cart</a>
     </div>
 </div>
     
