--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
 
 <div class="container1">
     <div class="pDuct">
-        <img src="img/Sofa-1.png" alt="beige sofa">
+        <img src="img/Sofa-1.jpg" alt="beige sofa">
         <h3 href="product-1.html">Beige Sofa</h3>
         <h3>$1099.00</h3>
         <a class="add-cart cart1" href="#">Add Cart</a>
@@ -36,7 +36,7 @@
         <a class="add-cart cart2" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
-        <img src="img/Sofa-3.png" alt="sofa-image">
+        <img src="img/Sofa-3.jpg" alt="sofa-image">
         <h3>Leather Sofa</h3>
         <h3>$1699.00</h3>
         <a class="add-cart cart3" href="#">Add Cart</a>
@@ -60,13 +60,13 @@
         <a class="add-cart cart6" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
-        <img src="img/Sofa-7.png" alt="sofa-image">
+        <img src="img/Sofa-7.jpg" alt="sofa-image">
         <h3>Orange Sofa</h3>
         <h3>$1399.00</h3>
         <a class="add-cart cart7" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
-        <img src="img/Sofa-8.png" alt="sofa-image">
+        <img src="img/Sofa-8.jpg" alt="sofa-image">
         <h3>Pink Sofa</h3>
         <h3>$1099.00</h3>
         <a class="add-cart cart8" href="#">Add Cart</a>
