--- a/cart.html
+++ b/cart.html
@@ -30,6 +30,16 @@
       </header>
     </div>
 
+    <div class="pContain">
+      <div class="pHeader">
+        <h5 class="pTitle">PRODUCT</h5>
+        <h5 class="pPrice">PRICE</h5>
+        <h5 class="pQuantity">QUANTITY</h5>
+        <h5 class="pTotal">TOTAL</h5>
+      </div>
+      <div class="pCache"></div>
+    </div>
+
     <div class="footer-container">
       <div class="column1">
         <h3>Support</h3>
@@ -54,5 +64,13 @@
         <a href="#">Community Guidelines</a>
       </div>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
