--- a/products.html
+++ b/products.html
@@ -25,61 +25,61 @@
 <div class="container1">
     <div class="pDuct">
         <img src="img/Sofa-1.jpg" alt="beige sofa">
-        <h3 href="product-1.html">Beige Sofa</h3>
+        <a class="pTitle-CSS" href="product-1.html">Beige Sofa</a>
         <h3>$1099.00</h3>
         <a class="add-cart cart1" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-2.jpg" alt="sofa-image">
-        <h3>Navy Sofa</h3>
+        <a class="pTitle-CSS">Navy Sofa</a>
         <h3>$1599.00</h3>
         <a class="add-cart cart2" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-3.jpg" alt="sofa-image">
-        <h3>Leather Sofa</h3>
+        <a class="pTitle-CSS">Leather Sofa</a>
         <h3>$1699.00</h3>
         <a class="add-cart cart3" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-4.jpg" alt="sofa-image">
-        <h3>Brown Sofa</h3>
+        <a class="pTitle-CSS">Brown Sofa</a>
         <h3>$1699.00</h3>
         <a class="add-cart cart4" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-5.jpg" alt="sofa-image">
-        <h3>Grey Sofa</h3>
+        <a class="pTitle-CSS">Grey Sofa</a>
         <h3>$1599.00</h3>
         <a class="add-cart cart5" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-6.jpg" alt="sofa-image">
-        <h3>White Sofa</h3>
+        <a class="pTitle-CSS">White Sofa</a>
         <h3>$1299.00</h3>
         <a class="add-cart cart6" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-7.jpg" alt="sofa-image">
-        <h3>Orange Sofa</h3>
+        <a class="pTitle-CSS">Orange Sofa</a>
         <h3>$1399.00</h3>
         <a class="add-cart cart7" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-8.jpg" alt="sofa-image">
-        <h3>Pink Sofa</h3>
+        <a class="pTitle-CSS">Pink Sofa</a>
         <h3>$1099.00</h3>
         <a class="add-cart cart8" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-9.jpg" alt="sofa-image">
-        <h3>Coffee Sofa</h3>
+        <a class="pTitle-CSS">Coffee Sofa</a>
         <h3>$1299.00</h3>
         <a class="add-cart cart9" href="#">Add Cart</a>
     </div>
     <div class="pDuct">
         <img src="img/Sofa-10.jpg" alt="sofa-image">
-        <h3>Dark Sofa</h3>
+        <a class="pTitle-CSS">Dark Sofa</a>
         <h3>$1299.00</h3>
         <a class="add-cart cart10" href="#">Add Cart</a>
     </div>
