--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="showcase-container-home">
                 <div>
                     <a href="#" >
-                        <img class="showcase-img-home" src="img/Sofa-1.png" alt="A beige recliner sofa">
+                        <img class="showcase-img-home" src="img/Sofa-1.jpg" alt="A beige recliner sofa">
                     </a>
                     <p class="showcase-item-text-home">Recliner sofa</p>
                 </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div>
                     <a href="#" >
-                        <img class="showcase-img-home" src="img/Sofa-3.png" alt="A Brown-beige sofa">
+                        <img class="showcase-img-home" src="img/Sofa-3.jpg" alt="A Brown-beige sofa">
                     </a>
                     <p class="showcase-item-text-home">Leather sofa</p>
                 </div>
