--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <Header> <p id="logo">FURNADA</p>
+    <header> <p id="logo">FURNADA</p>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">HOME</a></li>
@@ -20,7 +20,7 @@
         </ul>
     
         <div class= "top-container"></div>
-    </Header>
+    </header>
 
 <div class="container1">
     <div class="pDuct">
