--- a/products.html
+++ b/products.html
@@ -84,7 +84,30 @@
         <a class="add-cart cart10" href="#">Add Cart</a>
     </div>
 </div>
-    
+<div class="footer-container">
+    <div class="column1">
+        <h3>Support</h3>
+        <a href="#">Contact Us</a>
+        <a href="#">Return Item</a>
+        <a href="#">FAQ</a>
+        <a href="#">Privacy Choices</a>
+        <a href="#">Payment Options</a>
+    </div>
+
+    <div class="column2">
+        <h3>About Us</h3>
+        <a href="#">Career</a>
+        <a href="#">Partners</a>
+        <a href="#">Blog</a>
+    </div>
+
+    <div class="column3">
+        <h3>Legal</h3>
+        <a href="#">Terms of Service</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Community Guidelines</a>
+    </div>
+</div>
 
 
 </body>
