--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="main.js" defer></script>
+    <script src="javaScript/main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,33 +14,35 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div class="top-container">
-      <header>
-        <p id="logo">FURNADA</p>
+    <main>
+      <section class="top-container">
+        <header>
+          <p id="logo">FURNADA</p>
 
-        <nav class="navbar">
-          <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="products.html">PRODUCTS</a></li>
-            <li class="cart">
-              <a href="cart.html">CART <span>0</span></a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
+          <nav class="navbar">
+            <ul>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="products.html">PRODUCTS</a></li>
+              <li class="cart">
+                <a href="cart.html">CART <span>0</span></a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+      </section>
 
-    <div class="pContain">
-      <div class="pHeader">
-        <h5 class="pTitle">PRODUCT</h5>
-        <h5 class="pPrice">PRICE</h5>
-        <h5 class="pQuantity">QUANTITY</h5>
-        <h5 class="pTotal">TOTAL</h5>
+      <div class="pContain">
+        <div class="pHeader">
+          <h5 class="pTitle">PRODUCT</h5>
+          <h5 class="pPrice">PRICE</h5>
+          <h5 class="pQuantity">QUANTITY</h5>
+          <h5 class="pTotal">TOTAL</h5>
+        </div>
+        <div class="pCache"></div>
       </div>
-      <div class="pCache"></div>
-    </div>
+    </main>
 
-    <div class="footer-container">
+    <footer class="footer-container">
       <div class="column1">
         <h3>Support</h3>
         <a href="#">Contact Us</a>
@@ -63,7 +65,7 @@
         <a href="#">Privacy Policy</a>
         <a href="#">Community Guidelines</a>
       </div>
-    </div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
