--- a/products.html
+++ b/products.html
@@ -84,7 +84,7 @@
         <a class="add-cart cart10" href="#">Add Cart</a>
     </div>
 </div>
-<div class="footer-container">
+<footer class="footer-container">
     <div class="column1">
         <h3>Support</h3>
         <a href="#">Contact Us</a>
@@ -107,7 +107,7 @@
         <a href="#">Privacy Policy</a>
         <a href="#">Community Guidelines</a>
     </div>
-</div>
+</footer>
 
 
 </body>
