--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body>
+  <body class="cart-body">
     <main>
       <section class="top-container">
         <header>
@@ -31,41 +31,45 @@
         </header>
       </section>
 
-      <div class="pContain">
-        <div class="pHeader">
-          <h5 class="pTitle">PRODUCT</h5>
-          <h5 class="pPrice">PRICE</h5>
-          <h5 class="pQuantity">QUANTITY</h5>
-          <h5 class="pTotal">TOTAL</h5>
+      <h2 class="cart-heading">Your Shopping Cart</h2>
+
+      <section class="cartWrapper">
+        <div class="pContain">
+          <div class="pHeader">
+            <h5 class="pTitle">PRODUCT</h5>
+            <h5 class="pPrice">PRICE</h5>
+            <h5 class="pQuantity">QUANTITY</h5>
+            <h5 class="pTotal">TOTAL</h5>
+          </div>
+          <div class="pCache"></div>
         </div>
-        <div class="pCache"></div>
-      </div>
+      </section>
     </main>
 
     <footer class="footer-container">
-      <div class="column1">
+    <div class="column1">
         <h3>Support</h3>
         <a href="#">Contact Us</a>
         <a href="#">Return Item</a>
         <a href="#">FAQ</a>
         <a href="#">Privacy Choices</a>
         <a href="#">Payment Options</a>
-      </div>
+    </div>
 
-      <div class="column2">
+    <div class="column2">
         <h3>About Us</h3>
         <a href="#">Career</a>
         <a href="#">Partners</a>
         <a href="#">Blog</a>
-      </div>
+    </div>
 
-      <div class="column3">
+    <div class="column3">
         <h3>Legal</h3>
         <a href="#">Terms of Service</a>
         <a href="#">Privacy Policy</a>
         <a href="#">Community Guidelines</a>
-      </div>
-    </footer>
+    </div>
+</footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
